Fifth round of cleanup
Mostly missing <?>, use new API for notification groups, null annotations for arrays,
static-ness of methods and some smaller bits.
Also fix a typo in method's name.